// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Box renders 1`] = `
<div
  className="sc-bdVaJa cahKXE"
  is={null}
/>
`;

exports[`Box renders with props 1`] = `
<div
  className="sc-bdVaJa juTkkz"
  is={null}
/>
`;

exports[`Flex renders 1`] = `
<div
  className="sc-htpNat eLQHN sc-bdVaJa iHZvIS"
  is={null}
/>
`;

exports[`Flex renders with props 1`] = `
<div
  className="sc-htpNat deySwf sc-bdVaJa iHZvIS"
  is={null}
/>
`;

exports[`Flex renders with responsive props 1`] = `
<div
  className="sc-htpNat acOuK sc-bdVaJa iHZvIS"
  is={null}
/>
`;

exports[`Grid renders 1`] = `
<div
  className="sc-bwzfXH fIMJGd sc-bdVaJa iHZvIS"
  is={null}
/>
`;
